<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.EmailSendToResetPasswordActivity">

    <ImageView
        android:id="@+id/imgBack"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/back_icon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/imageview" />

    <ImageView
        android:id="@+id/imgEmailSent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/imageview"
        android:src="@drawable/email_sent_bg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBack" />

    <TextView
        android:id="@+id/tvCheck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_semibold"
        android:gravity="center"
        android:text="@string/check_email"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="@+id/imgEmailSent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/imgEmailSent"
        app:layout_constraintTop_toBottomOf="@+id/imgEmailSent" />

    <TextView
        android:id="@+id/tvInformation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/manrope_regular"
        android:gravity="center"
        android:lineSpacingExtra="7dp"
        android:text="@string/information_email"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@+id/btnOpenGmail"
        app:layout_constraintStart_toStartOf="@+id/btnOpenGmail"
        app:layout_constraintTop_toBottomOf="@+id/tvCheck" />


    <Button
        android:id="@+id/btnOpenGmail"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/open_email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInformation" />

        <TextView
            android:id="@+id/tvSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/skip_confirmation"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/btnOpenGmail"
            app:layout_constraintStart_toStartOf="@+id/btnOpenGmail"
            app:layout_constraintTop_toBottomOf="@+id/btnOpenGmail" />

        <TextView
            android:id="@+id/tvInformation1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/information_email1"
            android:textSize="15sp"
            app:layout_constraintBottom_toTopOf="@+id/tvInformation2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tvInformation2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:fontFamily="@font/manrope_regular"
            android:text="@string/information_email2"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="@+id/tvAnotherEmail"
            app:layout_constraintEnd_toStartOf="@+id/tvAnotherEmail"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvAnotherEmail" />

        <TextView
            android:id="@+id/tvAnotherEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/manrope_extrabold"
            android:text="@string/another_email"
            android:textColor="@color/primaryColor"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/tvInformation2" />
</androidx.constraintlayout.widget.ConstraintLayout>