<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/manrope_semibold"
        android:text="@string/title_sign_up"
        android:textColor="@color/black"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/manrope_regular"
        android:layout_marginTop="8dp"
        android:text="@string/subtitle_signup"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

    <EditText
        android:id="@+id/edEmailSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/email"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitle"
        app:layout_constraintVertical_bias="0.08"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/edNumberPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/handphone"
        android:inputType="phone"
        android:textSize="17sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edEmailSignUp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/edPasswordSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/input_password_hint"
        android:textSize="17sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNumberPhone" />

    <EditText
        android:id="@+id/edPasswordAgainSignUp"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/rounded_edittext"
        android:fontFamily="@font/manrope_regular"
        android:hint="@string/input_password_again_hint"
        android:textSize="17sp"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordSignUp"
        android:importantForAutofill="no" />

    <CheckBox
        android:id="@+id/cbAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/agreement"
        app:layout_constraintStart_toStartOf="@+id/edPasswordAgainSignUp"
        app:layout_constraintTop_toBottomOf="@+id/edPasswordAgainSignUp" />

    <TextView
        android:id="@+id/tvAgreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/term_condition"
        android:textColor="@color/primaryColor"
        app:layout_constraintBottom_toBottomOf="@+id/cbAgreement"
        app:layout_constraintEnd_toEndOf="@+id/edPasswordAgainSignUp"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toEndOf="@+id/cbAgreement"
        app:layout_constraintTop_toTopOf="@+id/cbAgreement" />

    <Button
        android:id="@+id/btnSignUpEmail"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/title_sign_up"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAgreement" />

    <TextView
        android:id="@+id/tvInfoAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/manrope_regular"
        android:text="@string/have_account"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@+id/tvSignIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="@+id/btnSignUpEmail"
        app:layout_constraintTop_toBottomOf="@+id/btnSignUpEmail" />

    <TextView
        android:id="@+id/tvSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:fontFamily="@font/manrope_extrabold"
        android:text="@string/title_login"
        android:textColor="@color/primaryColor"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvInfoAccount"
        app:layout_constraintEnd_toEndOf="@+id/btnSignUpEmail"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvInfoAccount"
        app:layout_constraintTop_toTopOf="@+id/tvInfoAccount" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvInfoAccount" />

</androidx.constraintlayout.widget.ConstraintLayout>