<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F6F5FA"
    tools:context=".onboarding.OnBoardingWithLoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@drawable/rounded_bottom"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="@string/imageview" />

        <androidx.viewpager.widget.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="450dp"
            android:overScrollMode="never"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_editor_absoluteX="1dp"
            app:layout_editor_absoluteY="1dp" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabLayoutIndicator"
            android:layout_width="50dp"
            android:layout_height="30dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPager"
            app:tabBackground="@drawable/indicator_selector"
            app:tabIndicatorHeight="0dp"
            app:tabRippleColor="@null" />

        <Button
            android:id="@+id/btnLoginWithEmail"
            style="@style/ButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:text="@string/login_email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <Button
            android:id="@+id/btnLoginWithGoogle"
            style="@style/ButtonLoginWithGoogle"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login_google"
            app:layout_constraintEnd_toEndOf="@+id/btnLoginWithEmail"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/btnLoginWithFacebook"
            app:layout_constraintTop_toBottomOf="@+id/btnLoginWithEmail" />

        <Button
            android:id="@+id/btnLoginWithFacebook"
            style="@style/ButtonLoginWithFacebook"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginEnd="8dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/login_facebook"
            app:layout_constraintBottom_toBottomOf="@+id/btnLoginWithGoogle"
            app:layout_constraintEnd_toStartOf="@+id/btnLoginWithGoogle"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="@+id/btnLoginWithEmail"
            app:layout_constraintTop_toTopOf="@+id/btnLoginWithGoogle" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>